update short link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!--o-grid__cell--width-60@medium o-grid__cell--offset-20@medium u-center-block-->
             <div class="c-card u-highest">
                <div class=" c-card__item c-card__item--brand  c-text u-centered u-large"><b>Cálculo de nota necessária na prova final</b></div>
-               <a href="whatsapp://send?text=Cálculo de prova final - http://bit.ly/finalsi" data-action="share/whatsapp/share">
+               <a href="whatsapp://send?text=Cálculo de prova final - https://bit.ly/finaluneb" data-action="share/whatsapp/share">
                <button  class="c-button--success c-button--active   u-medium c-button--block " onclick="console.log('HA')" ><i class="fa fa-fw fa-whatsapp c-icon" aria-hidden="true"></i> Compartilhar</button></a>
                
                <div class="c-card__item">
